<resources>
    <string name="app_name">okCupid</string>
    <string name="lower_string">By Continuing, you agree to our Terms. Learn how we process your data in out Privacy Policy
    and Cookies Policy</string>
    <string name="lets">Lets start with the basics</string>
    <string name="set_up">Set up your profile to meet new </string>
    <string name="people">people.</string>
    <string name="next">NEXT</string>
    <string name="signup">SIGN UP</string>
    <string name="sixcharacters"> 6 characters minimum</string>
    <string name="welome">Welcome!</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="creatAPassword">Create a password</string>
    <string name="youremail">your.email@exmple.com</string>
    <string name="whoareyou">Who are you?</string>
    <string name="title_activity_about_you">About you</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="previous">Previous</string>


    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="about_you">About you</string>
    <string name="first_name">First name</string>
    <string name="This"> This info will be visible to others</string>
    <string name="i_am_a"> I am a...</string>
    <string name="woman"> Woman</string>
    <string name="man"> Man</string>
    <string name="more_options"> MORE OPTIONS</string>
    <string name="cis_woman"> Cis Woman</string>
    <string name="trans_woman">Trans Woman</string>
    <string name="cis_man">Cis Man</string>
    <string name="trans_man">Trans Man</string>
    <string name="tow_spirit">Tow Spirit</string>
    <string name="transsecial">Transsecial</string>
    <string name="non_binary">Non-binary</string>
    <string name="agender">Agender</string>
    <string name="bigender">Bigender</string>
    <string name="hijra">Hijra</string>
    <string name="other">Other</string>
    <string name="intersex">Intersex</string>
    <string name="month">Month</string>
    <string name="your_age_will_be_visible_to_others">Your age will be visible to others.</string>
    <string name="this_cannot_be_changed_later">This cannot be changed later.</string>
    <string name="where_do_you_primarilylive">Where do you primarilylive</string>
    <string name="fill_out">Fill out your location automaticaly by enabling location service.</string>
    <string name="fill_out_your_location">Fill out your location</string>
    <string name="automatically_by_enabling">automatically by enabling</string>
    <string name="location_services">location services.</string>
    <string name="enable_location_services">Enable location services</string>
    <string name="no_thanks">No thanks</string>
    <string name="country">Country</string>
    <string name="city">City</string>
    <string-array name="spinner_month">
        <item>Month</item>
        <item>Junuary</item>
        <item>February</item>
        <item>March</item>
        <item>April</item>
        <item>May</item>
        <item>June</item>
        <item>July</item>
        <item>August</item>
        <item>September</item>
        <item>Octoner</item>
        <item>November</item>
        <item>December</item>

    </string-array>
    <string-array name="spinner_year">
        <item>Year</item>
        <item>2021</item>
        <item>2020</item>
        <item>2019</item>
        <item>2018</item>
        <item>2017</item>
        <item>2016</item>
        <item>2015</item>
        <item>2014</item>
        <item>2013</item>
        <item>2012</item>
        <item>2011</item>
        <item>2010</item>
        <item>2009</item>
        <item>2008</item>
        <item>2007</item>
        <item>2006</item>
        <item>2005</item>
        <item>2004</item>
        <item>2003</item>
        <item>2002</item>
        <item>2001</item>
        <item>2000</item>
        <item>1999</item>
        <item>1998</item>
        <item>1997</item>
        <item>1996</item>
        <item>1995</item>
        <item>1994</item>
        <item>1993</item>
        <item>1992</item>
        <item>1991</item>
        <item>1990</item>
    </string-array>
    <string-array name="spinner_day">
        <item>Day</item>
        <item>1</item>
        <item>2</item>
        <item>3</item>
        <item>4</item>
        <item>5</item>
        <item>5</item>
        <item>7</item>
        <item>8</item>
        <item>9</item>
        <item>10</item>
        <item>11</item>
        <item>12</item>
        <item>13</item>
        <item>14</item>
        <item>15</item>
        <item>16</item>
        <item>17</item>
        <item>18</item>
        <item>19</item>
        <item>20</item>
        <item>21</item>
        <item>22</item>
        <item>23</item>
        <item>24</item>
        <item>25</item>
        <item>26</item>
        <item>27</item>
        <item>28</item>
        <item>29</item>
        <item>30</item>
        <item>31</item>
    </string-array>
    <string-array name="spinner_city">

        <item>Andhra Pradesh</item>
        <item>Arunachal Pradesh</item>
        <item>Assam</item>
        <item>Bihar</item>
        <item>Chhattisgarh</item>
        <item>Goa</item>
        <item>Gujarat</item>
        <item>Haryana</item>
        <item>Himachal Pradesh</item>
        <item>Jharkhand</item>


    </string-array>
    <string-array name="spinner_Country">
        <item>India</item>
    </string-array>

    <string name="appname">Spinner</string>
    <string name="transgender">Transgender</string>
    <string name="for_example_how_would_your_best_fiend_describe_you">For example, how would your best fiend describe you?</string>
    <string name="short_summary">short summary</string>
    <string name="intoduce_youselfwit_a">Introduce yourself with a</string>
    <string name="this_is_imporntant_to_me">This is imporntant to me     </string>
    <string name="background_amp_identity"><![CDATA[BACKGROUND & IDENTITY]]></string>
    <string-array name="numbers">
        <item>18</item>
        <item>19</item>
        <item>20</item>
        <item>21</item>
        <item>22</item>
        <item>23</item>
        <item>24</item>
        <item>25</item>
        <item>26</item>
        <item>27</item>
        <item>28</item>
        <item>29</item>
        <item>30</item>
        <item>31</item>
        <item>32</item>
        <item>33</item>
        <item>34</item>
        <item>35</item>
        <item>36</item>
        <item>37</item>
        <item>38</item>
        <item>39</item>
        <item>40</item>
    </string-array>

    <style name="first_cardview1">
        <item name="android:layout_width">100dp</item>
        <item name="android:layout_height">@dimen/dp_100</item>
        <item name="android:layout_marginStart">10dp</item>
        <item name="android:layout_marginTop">10dp</item>
        <item name="cardCornerRadius">250dp</item>
        <item name="cardBackgroundColor">@color/white</item>
    </style>

    <style name="second_cardview1">
        <item name="android:layout_height">100dp</item>
        <item name="android:layout_width">100dp</item>
        <item name="cardCornerRadius">250dp</item>
        <item name="android:layout_gravity">center</item>
    </style>

    <style name="Image_view2">
        <item name="android:layout_height">100dp</item>
        <item name="android:layout_width">100dp</item>
        <item name="android:scaleType">centerCrop</item>
    </style>

    <style name="text_view">
        <item name="android:layout_height">wrap_content</item>
        <item name="android:layout_width">wrap_content</item>
        <item name="android:textSize">10sp</item>
    </style>

    <style name="Image_view1">
        <item name="android:layout_width">350dp</item>
        <item name="android:layout_height">wrap_content</item>
        <item name="android:scaleType">fitXY</item>
        <item name="android:layout_marginStart">@dimen/dp_20</item>
    </style>

    <style name="first_cardview">
        <item name="android:layout_width">50dp</item>
        <item name="android:layout_height">50dp</item>
        <item name="android:layout_marginStart">10dp</item>
        <item name="android:layout_marginTop">10dp</item>
        <item name="cardCornerRadius">150dp</item>
        <item name="cardBackgroundColor">@color/white</item>
    </style>

    <style name="second_cardview">
        <item name="android:layout_height">50dp</item>
        <item name="android:layout_width">50dp</item>
        <item name="cardCornerRadius">150dp</item>
        <item name="android:layout_gravity">center</item>
    </style>

    <style name="Image_view">
        <item name="android:layout_height">50dp</item>
        <item name="android:layout_width">50dp</item>
        <item name="android:scaleType">centerCrop</item>
    </style>
</resources>