<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
   <ScrollView
       android:id="@+id/tvScrollView"
       android:layout_width="@dimen/dp_350"
       android:layout_centerHorizontal="true"
       android:layout_centerVertical="true"
       android:orientation="vertical"
       android:layout_height="@dimen/dp_450">
       <LinearLayout
        android:id="@+id/tvgenderL"
        android:layout_width="match_parent"
        android:orientation="vertical"
        android:layout_height="match_parent">

           <CheckBox
               android:layout_width="match_parent"
               android:layout_height="wrap_content"
               android:button="@null"
               android:padding="10dp"
               android:drawableRight="@drawable/checkbox"
               android:text="@string/woman"
               android:textSize="20sp" />
           <CheckBox
               android:layout_width="match_parent"
               android:layout_height="wrap_content"
               android:button="@null"
               android:padding="10dp"
               android:drawableRight="@drawable/checkbox"
               android:text="@string/cis_woman"
               android:textSize="20sp" />
           <CheckBox
               android:layout_width="match_parent"
               android:layout_height="wrap_content"
               android:button="@null"
               android:padding="10dp"
               android:drawableRight="@drawable/checkbox"
               android:text="@string/trans_woman"
               android:textSize="20sp" />
           <CheckBox
               android:layout_width="match_parent"
               android:layout_height="wrap_content"
               android:button="@null"
               android:padding="10dp"
               android:drawableRight="@drawable/checkbox"
               android:text="@string/man"
               android:textSize="20sp" />
           <CheckBox
           android:layout_width="match_parent"
           android:layout_height="wrap_content"
           android:button="@null"
           android:padding="10dp"
           android:drawableRight="@drawable/checkbox"
           android:text="@string/cis_man"
           android:textSize="20sp" />
           <CheckBox
           android:layout_width="match_parent"
           android:layout_height="wrap_content"
           android:button="@null"
           android:padding="10dp"
           android:drawableRight="@drawable/checkbox"
           android:text="@string/trans_man"
           android:textSize="20sp" />
           <CheckBox
           android:layout_width="match_parent"
           android:layout_height="wrap_content"
           android:button="@null"
           android:padding="10dp"
           android:drawableRight="@drawable/checkbox"
           android:text="@string/agender"
           android:textSize="20sp" />
           <CheckBox
               android:layout_width="match_parent"
               android:layout_height="wrap_content"
               android:button="@null"
               android:padding="10dp"
               android:drawableRight="@drawable/checkbox"
               android:text="@string/hijra"
               android:textSize="20sp" />
           <CheckBox
               android:layout_width="match_parent"
               android:layout_height="wrap_content"
               android:button="@null"
               android:padding="10dp"
               android:drawableRight="@drawable/checkbox"
               android:text="@string/intersex"
               android:textSize="20sp" />
           <CheckBox
               android:layout_width="match_parent"
               android:layout_height="wrap_content"
               android:button="@null"
               android:padding="10dp"
               android:drawableRight="@drawable/checkbox"
               android:text="@string/non_binary"
               android:textSize="20sp" />
           <CheckBox
               android:layout_width="match_parent"
               android:layout_height="wrap_content"
               android:button="@null"
               android:padding="10dp"
               android:drawableRight="@drawable/checkbox"
               android:text="@string/transgender"
               android:textSize="20sp" />
           <CheckBox
               android:layout_width="match_parent"
               android:layout_height="wrap_content"
               android:button="@null"
               android:padding="10dp"
               android:drawableRight="@drawable/checkbox"
               android:text="@string/other"
               android:textSize="20sp" />
       </LinearLayout>
   </ScrollView>






</RelativeLayout>