<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:background="@color/gray"
    android:layout_height="match_parent"
    tools:context=".Location">

    <ImageView
        android:id="@+id/imBack"
        android:layout_width="@dimen/dp_15"
        android:onClick="previous"
        android:layout_height="@dimen/dp_15"
        android:layout_marginStart="@dimen/dp_25"
        android:layout_marginTop="@dimen/dp_15"
        android:background="@drawable/back" />

    <TextView
        android:layout_width="@dimen/dp_120"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="@dimen/dp_9"
        android:text="@string/about_you"
        android:textColor="@color/black"
        android:textSize="@dimen/sp_22" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="@dimen/dp_55"
        android:fontFamily="@font/archivo_black"
        android:text="@string/where_do_you_primarilylive"
        android:textColor="@color/black"
        android:textSize="@dimen/sp_22" />
    <androidx.cardview.widget.CardView
        android:id="@+id/tvCardView"
        android:layout_width="@dimen/dp_350"
        android:layout_height="250dp"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">
            <TextView
                android:layout_marginTop="@dimen/dp_15"
                android:layout_width="wrap_content"
                android:layout_gravity="center"
                android:textSize="@dimen/sp_16"
                android:textColor="@color/blackgray"
                android:text="@string/fill_out_your_location"
                android:layout_height="wrap_content"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_gravity="center"
                android:textSize="@dimen/sp_16"
                android:textColor="@color/blackgray"
                android:text="@string/automatically_by_enabling"
                android:layout_height="wrap_content"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_gravity="center"
                android:textSize="@dimen/sp_16"
                android:textColor="@color/blackgray"
                android:text="@string/location_services"
                android:layout_height="wrap_content"/>
            <Button
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/enable_location_services"
                android:layout_marginTop="@dimen/dp_55"
                android:textStyle="bold"
                android:id="@+id/btnEnable"
                android:layout_marginStart="25dp"
                android:layout_marginEnd="25dp"
                android:textColor="#FFFFFf"
                android:layout_alignParentBottom="true"
                android:background="@drawable/rectangle" />
            <TextView
                android:layout_width="wrap_content"
                android:layout_gravity="center"
                android:text="@string/no_thanks"
                android:textColor="@color/blue"
                android:id="@+id/tvNothanks"
                android:layout_marginTop="@dimen/dp_15"
                android:textSize="@dimen/sp_22"
                android:layout_height="wrap_content"/>
        </LinearLayout>
    </androidx.cardview.widget.CardView>
    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/next"
        android:textStyle="bold"
        android:id="@+id/btnNext4"
        android:layout_marginStart="25dp"
        android:layout_marginEnd="25dp"
        android:layout_marginBottom="35dp"
        android:textColor="#FFFFFf"
        android:layout_alignParentBottom="true"
        android:background="@drawable/rectangle"
        />
    <TextView
        android:layout_width="match_parent"
        android:paddingStart="@dimen/dp_50"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="@dimen/dp_85"
        android:layout_centerHorizontal="true"
        android:textSize="@dimen/sp_22"
        android:textColor="@color/black"
        android:text="@string/This"
        android:layout_height="wrap_content"/>
    <View
        android:layout_width="@dimen/dp_30"
        android:background="@drawable/ic_view"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="@dimen/dp_15"
        android:layout_marginBottom="@dimen/dp_85"
        android:layout_height="@dimen/dp_30"/>
</RelativeLayout>