<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"

    android:background="@color/gray"
    android:layout_height="match_parent"
    tools:context=".email">
    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="@dimen/dp_20"
        android:layout_marginStart="@dimen/dp_5"
        android:padding="@dimen/dp_3"
        android:onClick="previous"
        android:background="@drawable/ic_keyboard_left_arrow_button"
        android:layout_height="@dimen/dp_21"
        android:layout_marginTop="@dimen/dp_15"/>


    <TextView
        android:id="@+id/about_You"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:text="@string/title_activity_about_you"
        android:textAlignment="center"
        android:textColor="@color/black"
        android:textSize="18sp" />

    <TextView
        android:id="@+id/welcome"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/about_You"
        android:layout_marginTop="15dp"
        android:text="@string/welome"
        android:textStyle="bold"
        android:textAlignment="center"
        android:textColor="@color/black"
        android:textSize="25sp"

        />

    <TextView
        android:id="@+id/whoareyou"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/welcome"
        android:text="@string/whoareyou"
        android:textStyle="bold"
        android:textAlignment="center"
        android:textColor="@color/black"
        android:textSize="25sp" />
    <TextView

        android:id="@+id/email"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/whoareyou"
        android:layout_marginStart="25dp"
        android:layout_marginEnd="25dp"

        android:layout_marginTop="150dp"
        android:text="@string/email"
        android:paddingTop="10dp"
        android:paddingBottom="10dp"
        android:textColor="@color/black"
        android:textSize="20sp" />
    <EditText
        android:id="@+id/etemailid"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/email"
        android:layout_marginStart="25dp"
        android:layout_marginEnd="25dp"
        android:paddingTop="10dp"
        android:background="@drawable/rectangle1"
        android:paddingBottom="10dp"
        android:textSize="18sp"
        android:hint="@string/youremail"

        />



    <TextView
        android:layout_width="wrap_content"
        android:layout_centerHorizontal="true"
        android:text="@string/This"
        android:layout_above="@+id/btnnextemail"
        android:drawableStart="@drawable/ic_baseline_remove_red_eye_24"
        android:textSize="@dimen/sp_22"
        android:textColor="@color/blackgray"
        android:layout_height="wrap_content"/>

    <Button
        android:id="@+id/btnnextemail"
        android:layout_width="match_parent"
        android:textAlignment="center"
        android:layout_height="wrap_content"

        android:text="@string/next"
        android:textColor="@color/white"
        android:textSize="@dimen/sp_20"
        android:layout_margin="@dimen/dp_25"
        android:padding="@dimen/dp_20"
        android:background="@drawable/rectangle"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="20dp"
        />








</RelativeLayout>