<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/gray"
    tools:context=".I_am_a">

    <ImageView
        android:id="@+id/imBack"
        android:layout_width="@dimen/dp_15"
        android:onClick="previous"
        android:layout_height="@dimen/dp_15"
        android:layout_marginStart="@dimen/dp_25"
        android:layout_marginTop="@dimen/dp_15"
        android:background="@drawable/back" />

    <TextView
        android:layout_width="@dimen/dp_120"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="@dimen/dp_9"
        android:text="@string/about_you"
        android:textColor="@color/black"
        android:textSize="@dimen/sp_22" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="@dimen/dp_55"
        android:fontFamily="@font/archivo_black"
        android:text="@string/i_am_a"
        android:textColor="@color/black"
        android:textSize="@dimen/sp_28" />

    <androidx.cardview.widget.CardView
        android:id="@+id/tvCardView"
        android:layout_width="@dimen/dp_350"
        android:layout_height="@dimen/dp_120"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:weightSum="1">

            <CheckBox
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:button="@null"
                android:padding="@dimen/dp_15"
                android:drawableRight="@drawable/checkbox"
                android:text="@string/woman"
                android:textSize="20sp" />
            <CheckBox
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:button="@null"
                android:padding="@dimen/dp_15"
                android:drawableRight="@drawable/checkbox"
                android:text="@string/man"
                android:textSize="20sp" />


        </LinearLayout>


    </androidx.cardview.widget.CardView>

    <TextView
        android:onClick="MoreOptions"
        android:id="@+id/tvMore"
        android:layout_below="@id/tvCardView"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="@dimen/dp_15"
        android:layout_width="wrap_content"
        android:text="@string/more_options"
        android:textColor="@color/blue"
        android:textStyle="bold"
        android:textSize="@dimen/sp_16"
        android:layout_height="wrap_content"/>
    <Button
        android:id="@+id/btnNext2"
        android:layout_width="@dimen/dp_350"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="@dimen/dp_15"
        android:text="@string/next"
        android:background="@drawable/rectangle"
        android:textColor="@color/white"
        android:textSize="@dimen/sp_22"
        android:textStyle="bold"
        android:layout_centerHorizontal="true"
        android:layout_height="@dimen/dp_55"/>
    <TextView
        android:layout_width="match_parent"
        android:paddingStart="@dimen/dp_50"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="@dimen/dp_85"
        android:layout_centerHorizontal="true"
        android:textSize="@dimen/sp_22"
        android:textColor="@color/black"
        android:text="@string/This"
        android:layout_height="wrap_content"/>

    <View
        android:layout_width="@dimen/dp_30"
        android:background="@drawable/ic_view"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="@dimen/dp_15"
        android:layout_marginBottom="@dimen/dp_85"
        android:layout_height="@dimen/dp_30"/>

</RelativeLayout>