<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:background="@color/gray"
    android:layout_height="match_parent"
    tools:context=".Introduce">
    <ImageView
        android:id="@+id/imBack"
        android:layout_width="@dimen/dp_15"
        android:layout_height="@dimen/dp_15"
        android:layout_marginStart="@dimen/dp_25"
        android:layout_marginTop="@dimen/dp_15"
        android:background="@drawable/back" />

    <TextView
        android:layout_width="@dimen/dp_120"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="@dimen/dp_9"
        android:text="@string/about_you"
        android:textColor="@color/black"
        android:textSize="@dimen/sp_22" />

    <TextView
        android:id="@+id/tvIntro"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="@dimen/dp_55"
        android:fontFamily="@font/archivo_black"
        android:text="@string/intoduce_youselfwit_a"
        android:textColor="@color/black"
        android:textSize="@dimen/sp_22" />
    <TextView
        android:layout_below="@id/tvIntro"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:fontFamily="@font/archivo_black"
        android:text="@string/short_summary"
        android:textColor="@color/black"
        android:textSize="@dimen/sp_22" />
    <androidx.cardview.widget.CardView
        android:id="@+id/tvCardView"
        android:layout_width="@dimen/dp_350"
        android:layout_height="250dp"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true">
        <TextView

                android:layout_width="wrap_content"
                android:layout_margin="@dimen/dp_20"
                android:textSize="@dimen/sp_22"
                android:textColor="@color/blackgray"
                android:hint="@string/for_example_how_would_your_best_fiend_describe_you"
                android:layout_height="wrap_content"/>


    </androidx.cardview.widget.CardView>
    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/next"
        android:textStyle="bold"
        android:id="@+id/btnNext7"
        android:layout_marginStart="25dp"
        android:layout_marginEnd="25dp"
        android:layout_marginBottom="35dp"
        android:textColor="#FFFFFf"
        android:layout_alignParentBottom="true"
        android:background="@drawable/rectangle"
        />
</RelativeLayout>