<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:background="@color/gray"
    android:layout_height="match_parent"
    tools:context=".Live_location">
    <ImageView
        android:id="@+id/imBack"
        android:layout_width="@dimen/dp_15"
        android:onClick="previous"
        android:layout_height="@dimen/dp_15"
        android:layout_marginStart="@dimen/dp_25"
        android:layout_marginTop="@dimen/dp_15"
        android:background="@drawable/back" />

    <TextView
        android:layout_width="@dimen/dp_120"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="@dimen/dp_9"
        android:text="@string/about_you"
        android:textColor="@color/black"
        android:textSize="@dimen/sp_22" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="@dimen/dp_55"
        android:fontFamily="@font/archivo_black"
        android:text="Where do you primarily live?"
        android:textColor="@color/black"
        android:textSize="@dimen/sp_22" />
    <LinearLayout
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true"
        android:orientation="vertical"
        android:layout_marginStart="@dimen/dp_20"
        android:layout_marginEnd="@dimen/dp_20"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <TextView
            android:layout_width="match_parent"
            android:text="@string/country"
            android:textColor="@color/blackgray"
            android:textSize="@dimen/sp_16"
            android:layout_height="match_parent"/>
        <Spinner
            android:id="@+id/spCountry"
            android:layout_width="match_parent"
            android:background="@drawable/ic_rectangle_16"
            android:layout_height="wrap_content"/>
        <TextView
            android:layout_width="match_parent"
            android:text="@string/city"
            android:textColor="@color/blackgray"
            android:textSize="@dimen/sp_16"
            android:layout_height="match_parent"/>
        <Spinner
            android:id="@+id/spCity"
            android:layout_width="match_parent"
            android:background="@drawable/ic_rectangle_16"
            android:layout_height="wrap_content"/>
    </LinearLayout>
    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/next"
        android:textStyle="bold"
        android:id="@+id/btnNext5"
        android:layout_marginStart="25dp"
        android:layout_marginEnd="25dp"
        android:layout_marginBottom="35dp"
        android:textColor="#FFFFFf"
        android:layout_alignParentBottom="true"
        android:background="@drawable/rectangle"
        />
    <TextView
        android:layout_width="match_parent"
        android:paddingStart="@dimen/dp_50"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="@dimen/dp_85"
        android:layout_centerHorizontal="true"
        android:textSize="@dimen/sp_22"
        android:textColor="@color/black"
        android:text="@string/This"
        android:layout_height="wrap_content"/>
    <View
        android:layout_width="@dimen/dp_30"
        android:background="@drawable/ic_view"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="@dimen/dp_15"
        android:layout_marginBottom="@dimen/dp_85"
        android:layout_height="@dimen/dp_30"/>

</RelativeLayout>